# programming-with-cpp

./: .gitignore  Makefile  README.md  afterword.tex  appendix.tex  intro.tex  latexmkrc  references.bib  seminars.tex  setup.tex  styles.tex
01/: hello_world.tex
01/src/: line_approx.txt  plot.py
ch01/: hello_world.tex
ch02/: ide.tex
ch03/: computation.tex
ch04/: errors.tex
ch05/: calculator_part_1.tex
ch06/: calculator_part_2.tex
ch07/: functions.tex
ch08/: classes.tex
ch09/: io_streams.tex
ch10/: customizing_io.tex
ch11/: display_model.tex  extra.tex
ch12/: display_model.tex  extra.tex
ch13/: extra.tex  graphics_classes.tex
ch14/: graphics_class_design.tex
ch15/: functors.tex  graphing_functions_and_data.tex
ch16/: graphical_user_interfaces.tex
common/: biblatex.tex  contents.tex  packages.tex  references.tex  setup.tex  styles.tex  title.tex
progress/: .gitignore  Makefile  atom.py  google_serve.py  parse.py  progress.tex
progress/data/: sample-curricula.tex  sample-google_sheet.json  sample-token.json
projects/: .clang-format  CMakeLists.txt
projects/01/: hello.cpp
projects/02/: gen.py  least_squares.cpp  line_exact.txt  plot.py
projects/03/: Doxyfile  eratosthen.cpp  integral.cpp  power.cpp  root_search.cpp
projects/04/: bulls_and_cows.cpp
projects/05/: bitwise_calculator.cpp  calculator.cpp  calculator02buggy.cpp  english_grammar.cpp
projects/06/: calculator.cpp  calculator08buggy.cpp  test_ans.txt
projects/07/: name_age.cpp  name_age_test_in.txt
projects/07/calculator/: CMakeLists.txt  calculator.cpp  test_in.txt  token.cpp  token.h  variable.cpp  variable.h
projects/08/logic_elements/: CMakeLists.txt  logic.cpp  logic.h  main.cpp
projects/08/vec/: CMakeLists.txt  main.cpp
projects/09/: plot_temps.py  raw_temps.txt  store_temps.cpp  temp_stats.cpp
projects/10/: file.txt  reverse_file.cpp  reverse_file_via_two_files.cpp
projects/11/koch_snowflake/: CMakeLists.txt  main.cpp
projects/11/shape_primitives/: CMakeLists.txt  main.cpp
projects/ch12/: regular_polygons.cpp  superellipse.cpp
projects/ch12/koch_snowflake/: CMakeLists.txt  main.cpp
projects/ch12/shape_primitives/: CMakeLists.txt
projects/ch13/: exercises.cpp
projects/ch13/cross_wheel/: CMakeLists.txt  main.cpp
projects/ch13/fibonacci_spiral/: CMakeLists.txt  main.cpp
projects/ch13/hexagon_tile/: CMakeLists.txt  main.cpp
projects/ch14/logic_shapes/: CMakeLists.txt  logic.cpp  logic.h  logic_shapes.cpp  logic_shapes.h  main.cpp
projects/ch15/: combinations.cpp  function.cpp
projects/ch15/least_squares/: CMakeLists.txt  data.txt  data2.txt  least_squares.cpp  least_squares.h  main.cpp
projects/ch16/checkers/: CMakeLists.txt  Makefile  board.cpp  board.h  cell.cpp  cell.h  checkers.cpp  checkers.h  figure.cpp  figure.h  main.cpp  utils.h
projects/ch16/chessboard/: CMakeLists.txt  Makefile  board.cpp  board.h  cell.cpp  cell.h  main.cpp
projects/lib/Graph_lib/: GUI.cpp
projects/lib/Graph_lib/ext/: graph.cpp  graph.h
projects/lib/poly/: poly.cpp  poly.h
projects/lib/vec/: vec2d.cpp  vec2d.h
projects/messenger/: CMakeLists.txt  ReadMe.md  main.cpp
